// ==========================================
// 1. TABLAS CATÁLOGO (Select Simple)
// ==========================================

Table estadocivil {
  id serial [pk]
  nombre varchar [unique, not null]
  activo boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
  deleted_at timestamp
  deleted_by int
  is_deleted boolean [default: false]
}

Table relacionhijos {
  id serial [pk]
  nombre varchar [unique, not null]
  activo boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
  deleted_at timestamp
  deleted_by int
  is_deleted boolean [default: false]
}

Table situacionacademica {
  id serial [pk]
  nombre varchar [unique, not null]
  activo boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
  deleted_at timestamp
  deleted_by int
  is_deleted boolean [default: false]
}

Table situacionlaboral {
  id serial [pk]
  nombre varchar [unique, not null]
  activo boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
  deleted_at timestamp
  deleted_by int
  is_deleted boolean [default: false]
}

Table situacionvivienda {
  id serial [pk]
  nombre varchar [unique, not null]
  activo boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
  deleted_at timestamp
  deleted_by int
  is_deleted boolean [default: false]
}

Table rangosalarial {
  id serial [pk]
  nombre varchar [unique, not null]
  activo boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
  deleted_at timestamp
  deleted_by int
  is_deleted boolean [default: false]
}

Table religion {
  id serial [pk]
  nombre varchar [unique, not null]
  activo boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
  deleted_at timestamp
  deleted_by int
  is_deleted boolean [default: false]
}

// ==========================================
// 2. TABLAS CATÁLOGO (Multiselect & Reeducación)
// ==========================================

Table tiporelacion {
  id serial [pk]
  nombre varchar [unique, not null]
  activo boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
  deleted_at timestamp
  deleted_by int
  is_deleted boolean [default: false]
}

Table adiccion {
  id serial [pk]
  nombre varchar [unique, not null]
  activo boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
  deleted_at timestamp
  deleted_by int
  is_deleted boolean [default: false]
}

Table tipoviolenciainfantil {
  id serial [pk]
  nombre varchar [unique, not null]
  activo boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
  deleted_at timestamp
  deleted_by int
  is_deleted boolean [default: false]
}

Table sectorsocial {
  id serial [pk]
  nombre varchar [unique, not null]
  activo boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
  deleted_at timestamp
  deleted_by int
  is_deleted boolean [default: false]
}

Table actividadrecreativa {
  id serial [pk]
  nombre varchar [unique, not null]
  activo boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
  deleted_at timestamp
  deleted_by int
  is_deleted boolean [default: false]
}

Table generomusical {
  id serial [pk]
  nombre varchar [unique, not null]
  activo boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
  deleted_at timestamp
  deleted_by int
  is_deleted boolean [default: false]
}

Table motivoingreso {
  id serial [pk]
  nombre varchar [unique, not null]
  activo boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
  deleted_at timestamp
  deleted_by int
  is_deleted boolean [default: false]
}

Table tipoviolencia {
  id serial [pk]
  nombre varchar [unique, not null]
  activo boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
  deleted_at timestamp
  deleted_by int
  is_deleted boolean [default: false]
}

Table modalidadviolencia {
  id serial [pk]
  nombre varchar [unique, not null]
  activo boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
  deleted_at timestamp
  deleted_by int
  is_deleted boolean [default: false]
}

// ==========================================
// 3. ENTIDAD PRINCIPAL: AGRESOR
// ==========================================

Table agresor {
  folio serial [pk]
  curp varchar [unique, not null]
  nombre varchar [not null]
  apellido_paterno varchar [not null]
  apellido_materno varchar [not null]
  edad int [not null]
  
  lugar_nacimiento geography
  lugar_residencia geography
  lugar_trabajo geography
  
  parejas_previas int [not null]
  hijos int [not null]
  hermanos int [not null]
  
  estado_civil_id int
  situacion_academica_id int
  situacion_laboral_id int
  situacion_vivienda_id int
  rango_salarial_id int
  religion_id int
  relacion_hijos_id int
  
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
  deleted_at timestamp
  deleted_by int
  is_deleted boolean [default: false]
}

// ==========================================
// 4. TABLAS INTERMEDIAS (Muchos a Muchos)
// ==========================================

Table agresor_adiccion {
  agresor_folio int [pk]
  adiccion_id int [pk]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
  deleted_at timestamp
  deleted_by int
  is_deleted boolean [default: false]
}

Table agresor_violenciainfantil {
  agresor_folio int [pk]
  tipo_violencia_id int [pk]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
  deleted_at timestamp
  deleted_by int
  is_deleted boolean [default: false]
}

Table agresor_relacionpadre {
  agresor_folio int [pk]
  tipo_relacion_id int [pk]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
  deleted_at timestamp
  deleted_by int
  is_deleted boolean [default: false]
}

Table agresor_relacionmadre {
  agresor_folio int [pk]
  tipo_relacion_id int [pk]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
  deleted_at timestamp
  deleted_by int
  is_deleted boolean [default: false]
}

Table agresor_relacionhermanos {
  agresor_folio int [pk]
  tipo_relacion_id int [pk]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
  deleted_at timestamp
  deleted_by int
  is_deleted boolean [default: false]
}

Table agresor_sectorsocial {
  agresor_folio int [pk]
  sector_social_id int [pk]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
  deleted_at timestamp
  deleted_by int
  is_deleted boolean [default: false]
}

Table agresor_actividadrecreativa {
  agresor_folio int [pk]
  actividad_id int [pk]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
  deleted_at timestamp
  deleted_by int
  is_deleted boolean [default: false]
}

Table agresor_generomusical {
  agresor_folio int [pk]
  genero_id int [pk]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
  deleted_at timestamp
  deleted_by int
  is_deleted boolean [default: false]
}

// ==========================================
// 5. TABLAS DE PROCESO DE REEDUCACIÓN
// ==========================================

Table procesoreeducacion {
  folio serial [pk]
  agresor_id int [not null]
  fecha_inicio timestamp [not null]
  fecha_termino timestamp
  fecha_denuncia timestamp
  denunciante varchar [not null]
  folio_carpeta_fiscalia varchar [not null]
  
  motivo_ingreso_id int
  tipo_violencia_id int
  modalidad_violencia_id int
  
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
  deleted_at timestamp
  deleted_by int
  is_deleted boolean [default: false]
}

Table grupo {
  folio serial [pk]
  ubicacion geography
  lugar varchar [not null]
  
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
  deleted_at timestamp
  deleted_by int
  is_deleted boolean [default: false]
}

Table sesion {
  folio serial [pk]
  nombre varchar [not null]
  objetivo text [not null]
  
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
  deleted_at timestamp
  deleted_by int
  is_deleted boolean [default: false]
}

Table lista {
  id serial [pk]
  agresor_id int [not null]
  grupo_id int [not null]
  sesion_id int [not null]
  
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
  deleted_at timestamp
  deleted_by int
  is_deleted boolean [default: false]
}
// ==========================================
// 6. GESTIÓN DE ACCESO (Usuarios y Roles)
// ==========================================

Table roles {
  id serial [pk]
  nombre varchar [unique, not null] // Ej: 'Superadmin', 'Administrador', 'Psicólogo', 'Capturista'
  descripcion text
  activo boolean [default: true]
}

Table usuarios {
  id serial [pk]
  username varchar [unique, not null]
  password_hash varchar [not null] // Nunca guardar en texto plano
  nombre_completo varchar [not null]
  correo varchar [unique, not null]
  rol_id int [not null]
  ultimo_acceso timestamp
  
  // Campos de auditoría interna
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  is_active boolean [default: true]
}

// ==========================================
// 7. RELACIONES (Foreign Keys)
// ==========================================

// Relaciones Agresor -> Catálogos Simples
Ref: agresor.estado_civil_id > estadocivil.id
Ref: agresor.situacion_academica_id > situacionacademica.id
Ref: agresor.situacion_laboral_id > situacionlaboral.id
Ref: agresor.situacion_vivienda_id > situacionvivienda.id
Ref: agresor.rango_salarial_id > rangosalarial.id
Ref: agresor.religion_id > religion.id
Ref: agresor.relacion_hijos_id > relacionhijos.id

// Relaciones Pivote -> Adicciones
Ref: agresor_adiccion.agresor_folio > agresor.folio
Ref: agresor_adiccion.adiccion_id > adiccion.id

// Relaciones Pivote -> Violencia Infantil
Ref: agresor_violenciainfantil.agresor_folio > agresor.folio
Ref: agresor_violenciainfantil.tipo_violencia_id > tipoviolenciainfantil.id

// Relaciones Pivote -> Relaciones Familiares
Ref: agresor_relacionpadre.agresor_folio > agresor.folio
Ref: agresor_relacionpadre.tipo_relacion_id > tiporelacion.id

Ref: agresor_relacionmadre.agresor_folio > agresor.folio
Ref: agresor_relacionmadre.tipo_relacion_id > tiporelacion.id

Ref: agresor_relacionhermanos.agresor_folio > agresor.folio
Ref: agresor_relacionhermanos.tipo_relacion_id > tiporelacion.id

// Relaciones Pivote -> Entorno Social
Ref: agresor_sectorsocial.agresor_folio > agresor.folio
Ref: agresor_sectorsocial.sector_social_id > sectorsocial.id

Ref: agresor_actividadrecreativa.agresor_folio > agresor.folio
Ref: agresor_actividadrecreativa.actividad_id > actividadrecreativa.id

Ref: agresor_generomusical.agresor_folio > agresor.folio
Ref: agresor_generomusical.genero_id > generomusical.id

// Relaciones Proceso de Reeducación
Ref: procesoreeducacion.agresor_id > agresor.folio
Ref: procesoreeducacion.motivo_ingreso_id > motivoingreso.id
Ref: procesoreeducacion.tipo_violencia_id > tipoviolencia.id
Ref: procesoreeducacion.modalidad_violencia_id > modalidadviolencia.id

// Relaciones Lista (Asistencia)
Ref: lista.agresor_id > agresor.folio
Ref: lista.grupo_id > grupo.folio
Ref: lista.sesion_id > sesion.folio

// Relación de Rol
Ref: usuarios.rol_id > roles.id

// ==========================================
// 8. RELACIONES DE AUDITORÍA (Trazabilidad de Usuarios)
// ==========================================

// --- Entidades Principales y Procesos ---
Ref: agresor.created_by > usuarios.id
Ref: agresor.updated_by > usuarios.id
Ref: agresor.deleted_by > usuarios.id

Ref: procesoreeducacion.created_by > usuarios.id
Ref: procesoreeducacion.updated_by > usuarios.id
Ref: procesoreeducacion.deleted_by > usuarios.id

Ref: grupo.created_by > usuarios.id
Ref: grupo.updated_by > usuarios.id
Ref: grupo.deleted_by > usuarios.id

Ref: sesion.created_by > usuarios.id
Ref: sesion.updated_by > usuarios.id
Ref: sesion.deleted_by > usuarios.id

Ref: lista.created_by > usuarios.id
Ref: lista.updated_by > usuarios.id
Ref: lista.deleted_by > usuarios.id

// --- Catálogos (Select Simple) ---
Ref: estadocivil.created_by > usuarios.id
Ref: estadocivil.updated_by > usuarios.id
Ref: estadocivil.deleted_by > usuarios.id

Ref: situacionacademica.created_by > usuarios.id
Ref: situacionacademica.updated_by > usuarios.id
Ref: situacionacademica.deleted_by > usuarios.id

Ref: situacionlaboral.created_by > usuarios.id
Ref: situacionlaboral.updated_by > usuarios.id
Ref: situacionlaboral.deleted_by > usuarios.id

Ref: situacionvivienda.created_by > usuarios.id
Ref: situacionvivienda.updated_by > usuarios.id
Ref: situacionvivienda.deleted_by > usuarios.id

Ref: rangosalarial.created_by > usuarios.id
Ref: rangosalarial.updated_by > usuarios.id
Ref: rangosalarial.deleted_by > usuarios.id

Ref: religion.created_by > usuarios.id
Ref: religion.updated_by > usuarios.id
Ref: religion.deleted_by > usuarios.id

Ref: relacionhijos.created_by > usuarios.id
Ref: relacionhijos.updated_by > usuarios.id
Ref: relacionhijos.deleted_by > usuarios.id

// --- Catálogos (Multiselect) ---
Ref: tiporelacion.created_by > usuarios.id
Ref: tiporelacion.updated_by > usuarios.id
Ref: tiporelacion.deleted_by > usuarios.id

Ref: adiccion.created_by > usuarios.id
Ref: adiccion.updated_by > usuarios.id
Ref: adiccion.deleted_by > usuarios.id

Ref: tipoviolenciainfantil.created_by > usuarios.id
Ref: tipoviolenciainfantil.updated_by > usuarios.id
Ref: tipoviolenciainfantil.deleted_by > usuarios.id

Ref: sectorsocial.created_by > usuarios.id
Ref: sectorsocial.updated_by > usuarios.id
Ref: sectorsocial.deleted_by > usuarios.id

Ref: actividadrecreativa.created_by > usuarios.id
Ref: actividadrecreativa.updated_by > usuarios.id
Ref: actividadrecreativa.deleted_by > usuarios.id

Ref: generomusical.created_by > usuarios.id
Ref: generomusical.updated_by > usuarios.id
Ref: generomusical.deleted_by > usuarios.id

// --- Catálogos (Reeducación) ---
Ref: motivoingreso.created_by > usuarios.id
Ref: motivoingreso.updated_by > usuarios.id
Ref: motivoingreso.deleted_by > usuarios.id

Ref: tipoviolencia.created_by > usuarios.id
Ref: tipoviolencia.updated_by > usuarios.id
Ref: tipoviolencia.deleted_by > usuarios.id

Ref: modalidadviolencia.created_by > usuarios.id
Ref: modalidadviolencia.updated_by > usuarios.id
Ref: modalidadviolencia.deleted_by > usuarios.id

// --- Tablas Intermedias (Pivotes Muchos a Muchos) ---
Ref: agresor_adiccion.created_by > usuarios.id
Ref: agresor_adiccion.updated_by > usuarios.id
Ref: agresor_adiccion.deleted_by > usuarios.id

Ref: agresor_violenciainfantil.created_by > usuarios.id
Ref: agresor_violenciainfantil.updated_by > usuarios.id
Ref: agresor_violenciainfantil.deleted_by > usuarios.id

Ref: agresor_relacionpadre.created_by > usuarios.id
Ref: agresor_relacionpadre.updated_by > usuarios.id
Ref: agresor_relacionpadre.deleted_by > usuarios.id

Ref: agresor_relacionmadre.created_by > usuarios.id
Ref: agresor_relacionmadre.updated_by > usuarios.id
Ref: agresor_relacionmadre.deleted_by > usuarios.id

Ref: agresor_relacionhermanos.created_by > usuarios.id
Ref: agresor_relacionhermanos.updated_by > usuarios.id
Ref: agresor_relacionhermanos.deleted_by > usuarios.id

Ref: agresor_sectorsocial.created_by > usuarios.id
Ref: agresor_sectorsocial.updated_by > usuarios.id
Ref: agresor_sectorsocial.deleted_by > usuarios.id

Ref: agresor_actividadrecreativa.created_by > usuarios.id
Ref: agresor_actividadrecreativa.updated_by > usuarios.id
Ref: agresor_actividadrecreativa.deleted_by > usuarios.id

Ref: agresor_generomusical.created_by > usuarios.id
Ref: agresor_generomusical.updated_by > usuarios.id
Ref: agresor_generomusical.deleted_by > usuarios.id